# LakerGif

./: .gitignore  README.md  index.html  package.json
src/: main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
